[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/common/TestStep.gd" type="Script" id=1]
[ext_resource path="res://scenes/common/CommonLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/common/AnswerButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/v1_work_on_high/TestStepTutorial.tscn" type="PackedScene" id=4]

[node name="TestStep" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0.215686, 0.352941, 1 )

[node name="TestElements" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0
custom_constants/separation = 30
alignment = 1

[node name="QuestionHeader" parent="TestElements" instance=ExtResource( 2 )]
margin_top = 378.0
margin_right = 1820.0
margin_bottom = 431.0
size_flags_horizontal = 1
size_flags_vertical = 0
text = "Вопрос 1: Кто проживает на дне океана?"
align = 1
autowrap = true

[node name="Separator" type="MarginContainer" parent="TestElements"]
margin_top = 461.0
margin_right = 1820.0
margin_bottom = 501.0
rect_min_size = Vector2( 0, 40 )

[node name="AnswersContainer" type="VBoxContainer" parent="TestElements"]
margin_top = 531.0
margin_right = 1820.0
margin_bottom = 531.0
custom_constants/separation = 30

[node name="Separator2" type="MarginContainer" parent="TestElements"]
margin_top = 561.0
margin_right = 1820.0
margin_bottom = 601.0
rect_min_size = Vector2( 0, 40 )

[node name="NavigationButtons" type="HBoxContainer" parent="TestElements"]
margin_top = 631.0
margin_right = 1820.0
margin_bottom = 701.0
custom_constants/separation = 30
alignment = 1

[node name="NextButton" parent="TestElements/NavigationButtons" instance=ExtResource( 3 )]
margin_left = 810.0
margin_right = 1010.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
text = "Далее"
script = null

[node name="Tutorial" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="TestElements/NavigationButtons/NextButton" to="." method="_on_NextButton_pressed"]
